--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ https://templatemo.com/tm-526-vanilla
                     <div class="left-text left_box">
                         <h4>Exoponential Growth</h4>
                         <div class="line-dec"></div>
-                        <p>Industrialization has allowed our species to grow to staggering numbers.  The human population has grown seven-fold since the beginning of the 19th century.  In fact, all the people living today make up 6.5% of all people who have ever lived.  We have grown exponentially, inhabiting virtually all livable land on the planet.</p>
+                        <p>Industrialization has allowed our species to grow to staggering numbers.  The human population has grown seven-fold since the beginning of the 19th century.  In fact, all the people living today make up 6.5% of all people who have ever lived<span class="ref_num">[1]</span>.  We have grown exponentially, inhabiting virtually all livable land on the planet.</p>
                         <ul>
                             <li>-  Click the images to see current population data and population distribution.</li>
                             <li>-  Watch the videos to explore the science behind human population growth.</li>
@@ -148,7 +148,7 @@ https://templatemo.com/tm-526-vanilla
                         <div class="line-dec"></div>
                         <p>The truth is that our exponential growth rate has stopped in modern times.  Growth rates are down in many parts of the developed world.  However, some areas are still expected to show huge population booms.  These three contries: India, China, and Nigeria together are expected to produce 35% of total population growth in the next 30 years.  
                             <br/><br/>
-                        This growth will mostly occur in dense urban areas.  The UN projects that 68% of the population will live in cities by 2050?  This massive movement of urbanization creates many lagistical problems to be solved.  What implications do increased population growth and urbanization have on the earth's carrying capacity?</p>
+                        This growth will mostly occur in dense urban areas.  The UN projects that 68% of the population will live in cities by 2050<span class="ref_num">[2]</span>.  This massive movement of urbanization creates many lagistical problems to be solved.  What implications do increased population growth and urbanization have on the earth's carrying capacity?</p>
                         <ul>
                             <li>Explore the Interactive Population Density Map from <a href="http://luminocity3d.org">LuminoCity3D.org</a></li>
 
@@ -181,7 +181,7 @@ https://templatemo.com/tm-526-vanilla
                         <h4 style="color: orange">Carrying Capacity</h4>
                         <div class="line-dec"></div>
                         <p>
-Many scientists believe we are reaching the limits of sustainable growth rates on earth.  The physics of supplying proper food, clothing, shelter and power to the addition of billions of more people on earth has limitations.  These limitations will soon be stretched as the human population grows to 10 billion in 2050.  It is also projected that we will need the equivalent of 3 earths to support us by 2050.
+Many scientists believe we are reaching the limits of sustainable growth rates on earth.  The physics of supplying proper food, clothing, shelter and power to the addition of billions of more people on earth has limitations.  These limitations will soon be stretched as the human population grows to 10 billion in 2050<span class="ref_num">[3]</span>.  It is also projected that we will need the equivalent of 3 earths to support us by 2050.
 
                             <br/><br/>
 
@@ -232,7 +232,7 @@ Many scientists believe we are reaching the limits of sustainable growth rates o
                         <h4 style="color: orange">Sustainable Future</h4>
                         <div class="line-dec"></div>
                         <p>
-                                <p>Sustainability is the key.  Here are some solutions to help mitigate the effects of population growth:</p>
+                                <p>Sustainability is the key.  Here are some solutions to help mitigate the effects of population growth<span class="ref_num">[4]</span>:</p>
                                 <ul>
                                     <li>Focus on sustainable urban development with renewable energy</li>
                                     <li>Education and initiatives addressing population growth and consumption habits</li>
@@ -245,6 +245,10 @@ Many scientists believe we are reaching the limits of sustainable growth rates o
                             Overall, the world will need to come together to overcome the challenges of an increasing human population closer to carrying capacity.  Many solutions will require a shift in thinking and policy.  However, since there are no more planets for us to go to, we must take on the responsibility of providing a quality standard of living for all people on Earth.
 
                             </p>
+
+                                                            <ul>
+                                    <li>Watch the videos for more information on solutions to the growing population.</li>
+                                </ul>
                     </div>
 
                 </div>
@@ -291,14 +295,21 @@ Many scientists believe we are reaching the limits of sustainable growth rates o
             <div id="refs">
                 <hr class="hr-footer">
                 <h4 style="color: orange">REFERENCES</h4>
-                <p>Max Roser, Hannah Ritchie and Esteban Ortiz-Ospina, <i>World Population Growth</i>, <b>Own World in Data</b>, May 2019, <a href="https://ourworldindata.org/world-population-growth">Link</a></p>
+                <p><span class="ref_num">[1]</span> Max Roser, Hannah Ritchie and Esteban Ortiz-Ospina, <i>World Population Growth</i>, <b>Own World in Data</b>, May 2019, <a href="https://ourworldindata.org/world-population-growth">Link</a></p>
 
-                <p><i>68% of the world population projected to live in urban areas by 2050, says UN</i>, <b>United Nations Department Of Economic And Social Affairs</b>, 16 May 2018, <a href="https://www.un.org/development/desa/en/news/population/2018-revision-of-world-urbanization-prospects.html">Link</a></p>
+                <p><span class="ref_num">[2]</span> <i>68% of the world population projected to live in urban areas by 2050, says UN</i>, <b>United Nations Department Of Economic And Social Affairs</b>, 16 May 2018, <a href="https://www.un.org/development/desa/en/news/population/2018-revision-of-world-urbanization-prospects.html">Link</a></p>
 
-                <p><i>How Many People Can Our World Support?</i>, <b>Population Connection</b>, 2016, <a href="https://worldpopulationhistory.org/carrying-capacity/">Link</a></p>
+                <p><span class="ref_num">[3]</span> <i>How Many People Can Our World Support?</i>, <b>Population Connection</b>, 2016, <a href="https://worldpopulationhistory.org/carrying-capacity/">Link</a></p>
 
-                <p>Jonathan Foley, <i>The Future of Food</i>, <b>National Geographic Magazine</b>, 2016, <a href="https://www.nationalgeographic.com/foodfeatures/feeding-9-billion/">Link</a></p>
+                <p><span class="ref_num">[4]</span> Jonathan Foley, <i>The Future of Food</i>, <b>National Geographic Magazine</b>, 2016, <a href="https://www.nationalgeographic.com/foodfeatures/feeding-9-billion/">Link</a></p>
 
+                <br/><br/>
+                <h4 style="color: orange">VIDEOS</h4>
+                <p>Human Population Through Time <a href="https://www.youtube.com/watch?v=PUwmA3Q0_OE">Link</a></p>
+                <p>Human Population Growth - Crash Course Ecology #3 <a href="https://www.youtube.com/watch?v=E8dkWQVFAoA">Link</a></p>
+                <p>Paul Gilding: The Earth is full <a href="https://www.youtube.com/watch?v=DZT6YpCsapg">Link</a></p>
+                <p>What will food production look like in the future? <a href="https://www.youtube.com/watch?v=x-e1t2krFO4">Link</a></p>
+                <p>What is sustainable urban development? <a href="https://www.youtube.com/watch?v=h1sU_gOxjf4">Link</a></p>
             </div>
 
 
